feat: support setting a main account and savings envelope
This would then be used when you have multiple bank accounts, and you
want to register as if you took from one of the envelopes to pay for
expenses in these other accounts.